--- a/src/Component/Input.css
+++ b/src/Component/Input.css
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  gap:50px;
+  gap: 50px;
 }
 .center-div {
   width: 30%;
@@ -17,7 +17,7 @@
   box-shadow: rgba(190, 172, 172, 0.35) 0px 5px 15px;
   border-radius: 15px;
 }
-h1 {
+.center-div h1 {
   color: white;
   background: transparent;
   background-color: #8566aa;
@@ -50,21 +50,13 @@ input {
   background-color: #8566aa;
   color: white;
 }
-ol {
-  margin-top: 30px;
-}
-ol li {
-  padding: 0;
-  font-size: 20px;
-  font-weight: 500;
+.todo-style {
   display: flex;
-  text-transform: capitalize;
-  color: #8566aa;
-  min-height: 40px;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  margin-left: 40px;
 }
-.todo-style img {
+img {
   width: 30px;
   height: 30px;
   display: flex;
@@ -77,13 +69,20 @@ ol li {
   font-size: 20px;
   font-weight: 500;
   color: white;
- 
 }
-.todo-style {
+.list-contianer-first {
+  margin-top: 15px;
+}
+.task-list-first {
+  padding: 0;
+  font-size: 20px;
+  font-weight: 500;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  text-transform: capitalize;
+  color: #8566aa;
+  min-height: 40px;
   align-items: center;
+  margin-left: 40px;
 }
 .todo-style img:hover {
   width: 35px;
@@ -91,18 +90,41 @@ ol li {
 }
 .box-style {
   display: flex;
-  justify-content:center ;
-  /* margin-left: 20px; */
+  justify-content: center;
 }
 .cheak-box {
   background-color: #8566aa;
   width: 25px;
   height: 40px;
 }
-.img-style{
+.img-style {
   padding-right: 50px;
 }
-.cheak-box:checked + li {
-  text-decoration: line-through;
-  color: red  ;
+
+.list-com {
+  color: white;
+  background: transparent;
+  background-color: #8566aa;
+  padding: 6px 0 2px 0px;
+}
+.com-center-div {
+  width: 30%;
+  height: 80vh;
+  background-color: rgb(236, 226, 226);
+  box-shadow: rgba(190, 172, 172, 0.35) 0px 5px 15px;
+  border-radius: 15px;
+}
+.list-container-sec {
+  margin-top: 20px;
+}
+.task-list-sec {
+  padding: 0;
+  font-size: 20px;
+  font-weight: 500;
+  display: flex;
+  text-transform: capitalize;
+  color: #8566aa;
+  min-height: 30px;
+  align-items: center;
+  margin-left: 40px;
 }
